hphp/test/zend/good/ext/zlib/tests/compress_zlib_wrapper.php.skipif
<?hh
<<__EntryPoint>> function main() {
if (!extension_loaded("zlib")) die("skip");
}
