hphp/test/zend/bad/ext/phar/tests/bug53872.php.skipif
<?php 
if (!extension_loaded("phar")) die("skip"); 
if (!extension_loaded("zlib")) die("skip Test needs ext/zlib"); 
?>